# ML-Project-2

./: .gitignore  README.md  main.py  pyproject.toml
.planning/: PROJECT.md  config.json
notebooks/: 01_exploration.ipynb  demo.ipynb
report/: exploration_report.md
src/: __init__.py  data.py  eval.py  explore.py  model.py  preprocessing.py
