[project]
name = "ml-project-2"
version = "0.1.0"
description = "Covertype Classification Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "openml",
    "xgboost",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
